--- a/src/resources/views/blog/show.hbs
+++ b/src/resources/views/blog/show.hbs
@@ -18,10 +18,10 @@
         </div>
         {{!-- --}}
 
-        <div class="col-2">
+        {{!-- <div class="col-2">
             <h4>|Các chủ đề khác</h4>
 
             {{!-- chưa làm --}}
-        </div>
+        </div> --}}
     </div>
 </div>
