--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -2185,6 +2185,56 @@ blockquote {
 .eggy .message {
   line-height: 1.5; }
 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Josefin Sans', sans-serif; }
+
+.hero {
+  width: 100%;
+  background-image: linear-gradient(#8776ec, #2ddaf1), url();
+  background-size: cover;
+  background-position: center; }
+
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 20px;
+  padding-left: 10%;
+  padding-right: 10%; }
+  nav ul li {
+    list-style-type: none;
+    display: inline-block;
+    padding: 10px 20px; }
+    nav ul li a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold; }
+      nav ul li a:hover {
+        color: #ea1583;
+        transition: .3s; }
+
+a img {
+  width: 30px;
+  height: 30px;
+  margin-bottom: 20px; }
+
+button {
+  border: none;
+  background: #ea1583;
+  padding: 7px 30px;
+  border-radius: 20px;
+  color: white;
+  font-weight: bold;
+  font-size: 10px;
+  transition: .4s;
+  margin-bottom: 20px; }
+  button:hover {
+    transform: scale(1.3);
+    cursor: pointer; }
+
 .header {
   position: fixed;
   top: 0;
@@ -2411,6 +2461,7 @@ blockquote {
               font-weight: 500;
               margin-top: 6px; }
     .header__actions--avatar {
+      margin-bottom: 20px;
       display: flex;
       align-items: center;
       justify-content: center;
