--- a/src/resources/scss/_header.scss
+++ b/src/resources/scss/_header.scss
@@ -1,3 +1,76 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    // cái font chữ
+    font-family: 'Josefin Sans', sans-serif;
+}
+
+.hero {
+    width: 100%;
+    background-image: linear-gradient(rgb(135, 118, 236), rgb(45, 218, 241)), url();
+    background-size: cover;
+    background-position: center;
+}
+
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 20px;
+    padding-left: 10%;
+    padding-right: 10%;
+
+    ul {
+        li {
+            list-style-type: none;
+            display: inline-block;
+            padding: 10px 20px;
+
+            a {
+                color: white;
+                text-decoration: none;
+                font-weight: bold;
+
+                &:hover {
+                    color: #ea1583;
+                    transition: .3s;
+                }
+            }
+        }
+    }
+}
+
+
+
+a {
+    img {
+        width: 30px;
+        height: 30px;
+        margin-bottom: 20px;
+    }
+}
+
+button {
+    border: none;
+    background: #ea1583;
+    padding: 7px 30px;
+    border-radius: 20px;
+    color: white;
+    font-weight: bold;
+    font-size: 10px;
+    transition: .4s;
+    margin-bottom: 20px;
+
+    &:hover {
+        transform: scale(1.3);
+        cursor: pointer;
+    }
+}
+
+
+///// Chưa xóa mấy cái lung tung
+
 .header {
     position: fixed;
     top: 0;
@@ -137,6 +210,7 @@
                 -webkit-transform: translateY(-20px);
                 transform: translateY(-20px);
             }
+
             100% {
                 opacity: 1;
                 -webkit-transform: translateY(0);
@@ -328,6 +402,7 @@
         }
 
         &--avatar {
+            margin-bottom: 20px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -408,6 +483,7 @@
             .list {
                 padding-left: 0;
                 margin: 0;
+
 
                 &__item {
                     &:hover .list__link {
