--- a/src/resources/views/blog/detail.hbs
+++ b/src/resources/views/blog/detail.hbs
@@ -1,11 +1,11 @@
 <div style="margin: 200px;margin-top: 30px;">
-    <h2>{{blog.title}}</h2>
-    <hr />
+    <h2 style="text-align: center;">{{{blog.title}}}</h2>
+    <hr>
     <div>
         <img style="text-align: center; display: block;
-    margin: 0 auto; width:200px; height: 200px" src="../{{blog.image}}" alt="hình">
+    margin: 0 auto; width:80%; height: 600px" src="{{blog.image}}" alt="hình">
     </div>
-    <p style="margin-top: 30px;">{{blog.content}}</p>
+    <p style="margin-top: 30px;">{{{blog.content}}}</p>
 
 
 
