--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -2,7 +2,9 @@
     <nav>
         <a href="/">
             <img src="https://hdgmvietnam.com/admin/upload/image/giao-hoi-cong-giao-dan-than-trong-su-mang-giao-duc.jpg"
-                alt="logo">
+                alt="logo"
+                style="width: 30px;height: 30px;margin-bottom: 20px;"
+                >
         </a>
 
         {{!-- <h2 class="logo"> dasdwad</h2> --}}
@@ -12,7 +14,7 @@
             <li><a href="#">Học</a></li>
             <li><a href="#">Kết quả học tập</a></li>
 
-            <li><a href="#">Thi đấu</a></li>
+            <li><a href="/competition">Thi đấu</a></li>
         </ul>
 
 
@@ -49,12 +51,12 @@
                 </div>
 
                 <hr>
-                <ul class="list">
+                {{!-- <ul class="list">
                     <li class="list__item">
                         <a class="list__link" href="/admin">Quản lý hệ thống</a>
                     </li>
-                </ul>
-                <hr>
+                </ul> 
+                <hr>--}}
                 <ul class="list" style="line-break: auto;">
                     <li class="list__item" style="line-break: auto;">
                         <a class="list__link" href="/new-question">Đặt câu hỏi</a>
@@ -72,7 +74,7 @@
                         <a class="list__link" href="/password/change">Đổi mật khẩu</a>
                     </li>
                     <li class="list__item">
-                        <a class="list__link" href="/learning/result?subject=toan-hoc-10">Kết quả học tập</a>
+                        <a class="list__link" href="#">Kết quả học tập</a>
                     </li>
                 </ul>
                 <hr>
