--- a/src/resources/scss/_header.scss
+++ b/src/resources/scss/_header.scss
@@ -43,30 +43,15 @@ nav {
 
 
 
-a {
-    img {
-        width: 30px;
-        height: 30px;
-        margin-bottom: 20px;
-    }
-}
+// a {
+//     img {
+//         width: 30px;
+//         height: 30px;
+//         margin-bottom: 20px;
+//     }
+// }
 
-button {
-    border: none;
-    background: #ea1583;
-    padding: 7px 30px;
-    border-radius: 20px;
-    color: white;
-    font-weight: bold;
-    font-size: 10px;
-    transition: .4s;
-    margin-bottom: 20px;
 
-    &:hover {
-        transform: scale(1.3);
-        cursor: pointer;
-    }
-}
 
 
 ///// Chưa xóa mấy cái lung tung
