--- a/src/resources/views/auth/password-change.hbs
+++ b/src/resources/views/auth/password-change.hbs
@@ -51,27 +51,37 @@
     {{/each}}
 </div>
 
+{{#if errors}}
+    <div id="errors" style="visibility: hidden;">{{errors}}</div>
+{{else}}
+    {{#if success}}
+    <div id="success" style="visibility: hidden;">{{success}}</div>
+    {{/if}}
+{{/if}}
+
 <script>
-    document.addEventListener('DOMContentLoaded', function () {
-        // toast message
-        let msgToastError = '#{msgError}';
-        if (msgToastError != '') {
+        var msgError = document.getElementById('errors');
+        ///toast message
+        let msgToastError = msgError.innerHTML;
+
+        if(msgToastError != ''){
             Eggy({
                 title: 'Oops... Có gì đó không đúng',
-                message: msgToastError,
+                message:  msgToastError,
                 type: 'warning',
                 duration: 5000,
             });
         }
-
-        let msgToastSuccess = '#{msgSuccess}';
-        if (msgToastSuccess != '') {
+</script>
+<script>
+        var msgSuccess = document.getElementById('success');
+        let msgToastSuccess = msgSuccess.innerHTML;
+        if(msgToastSuccess != ''){
             Eggy({
-                title: 'Thành công',
-                message: msgToastSuccess,
+                title: 'Thành Công',
+                message:  msgToastSuccess,
                 type: 'success',
                 duration: 5000,
             });
         }
-    })
 </script>
